2001-04-27  Akim Demaille  <akim@epita.fr>

	* automake.in (&register_language): Rename `output-arg' and
	`derived-autodep' as `output_arg' and `derived_autodep' to match
	the Language attribute.
	Set the defaults in %option instead of $lang.

2001-04-27  Akim Demaille  <akim@epita.fr>

	* Automake/: New directory.
	* Automake/Struct.pm: New file, based on Perl 5.6's Class::Struct.
	* automake.in (Language): Use Automake::Struct.
	* tests/defs: Adjust to find Struct.

2001-04-23  Pavel Roskin <proski@gnu.org>

	* automake.in: Add forward declaration for register_language().
	* tests/Makefile.am (XFAIL_TESTS): Remove installsh.test - it
	passes now.

2001-04-20  Akim Demaille  <akim@epita.fr>

	* automake.in (%required_targets): Add `uninstall'.
	From Robert Collins.

2001-04-12  Akim Demaille  <akim@epita.fr>

	* automake.in (Language): Add attribute `name'.
	(&register_language): The name of the language is now given in the
	hash.
	No longer use `$lang' as the name of the language.
	Rename `$lang_obj' as `$lang'.

2001-04-12  Akim Demaille  <akim@epita.fr>

	* automake.in (Language): Add attribute `_finish'.
	(&finish): New.
	(Automake): Adjust.
	(&lang_header_finish, &lang_yaccxx_finish, &lang_lexxx_finish)
	(&lang_asm_finish): Remove.

2001-04-12  Akim Demaille  <akim@epita.fr>

	* automake.in (Language): Add attribute `extensions'.
	(Automake): Pass a hash to `&register_language' instead of a
	list of pseudo assignments.
	(&register_language): Adjust.
	(&finish_languages): Initialize `$ltoutarg'.

2001-04-12  Akim Demaille  <akim@epita.fr>

	* automake.in (Language): Add attribute `output_arg'.
	(%language_map): Remove.
	(&register_language): Build only the object, and store in
	%languages only.
	(&finish_languages, &handle_single_transform_list): Adjust.

2001-04-12  Akim Demaille  <akim@epita.fr>

	* automake.in (Language): Add attributes `flags', `compile' and
	`compiler'.
	(&finish_languages, &handle_single_transform_list, &handle_dist)