@@ -1,5 +1,9 @@
 2001-04-27  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&register_language): Use `new Language' with a hash.
+
+2001-04-27  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&register_language): Rename `output-arg' and
 	`derived-autodep' as `output_arg' and `derived_autodep' to match
 	the Language attribute.
